# zk-skills

./: .gitignore
audit-pr-merge-readiness/: SKILL.md
audit-pr-merge-readiness/agents/: openai.yaml
check-auth/: SKILL.md
cleanup-pr/: SKILL.md
cleanup-pr/agents/: openai.yaml
custom-gws-chat/: SKILL.md
custom-gws-docs-format/: SKILL.md
custom-gws-gmail-format/: SKILL.md
custom-gws-slides-edit/: SKILL.md  brand.md  build-commercial-ai-deck.py  catalog.md  extract-slides-text.py  sources.md  validation.md
design-guide/: SCOPE.md  SKILL.md
design-guide/assets/: palette-quantium.css  palette-wiq.css  primitives.css  spectrum.css
design-guide/examples/: _body.html
design-guide/implementations/: detailed.css  exec.css
design-guide/presets/: README.md
distil-workshop/: SKILL.md
generate-feedback/: SKILL.md
generate-feedback/references/: common-corrections.md  person_metadata.md
generate-nano-image/: SKILL.md
generate-nano-image/scripts/: generate.py  patch_helpers.py  pyproject.toml
html-to-pdf/: SKILL.md
manage-symlinks/: SKILL.md
manage-symlinks/scripts/: sync.sh
mds-to-html/: SKILL.md
q-html/: SKILL.md
rebuild-container/: SKILL.md
remove-ai-tells/: README.md  SKILL.md
remove-ai-tells/references/: TELLS.md  VOICE.md
skillify/: SKILL.md
slack/: SKILL.md
slack/references/: metadata_map.example.json
triage-git-issues/: SKILL.md
triage-git-issues/agents/: openai.yaml
wiq-html/: SKILL.md
write-guide.example/: SKILL.md
write-guide.example/references/: AUDIENCE.md
write-guide/examples/: AUDIENCE.md  SKILL.md
